--- a/asset/template/index.html
+++ b/asset/template/index.html
@@ -26,21 +26,39 @@
         footer {
             min-height: 10vh;
         }
-        .row {
+        .sig {
             padding: 10px;
+        }
+        .ubscript {
+            max-height: 20px;
+        }
+        .inlineb {
+            display: inline-block;
+            margin: 10px;
         }
     </style>
 </head>
 
 <body>
 <div class="container" id="mebody">
-    <div class="row">
+    <div class="row sig">
         <div class="col-md-8" id="mapspace">
         </div>
         <div class="col-md-4" id="controlPanel">
-        <div class="row">
-            <button type="button" class="btn btn-info" id="reload">RELOAD</button>
-        </div>
+            <div class="row ubscript">
+                <p class='text-muted'>Global Actions</p>
+            </div>
+            <div class="row">
+                <button type="button" class="btn btn-info inlineb" id="reload">RELOAD</button>
+            </div>
+            <div class="row ubscript">
+                <p class='text-muted'>Display Actions</p>
+            </div>
+            <div class="row">
+                <button type="button" class="btn btn-info inlineb" id="show_alt">ALTITUDE</button>
+                <button type="button" class="btn btn-info inlineb" id="show_precip">PRECIP</button>
+                <button type="button" class="btn btn-info inlineb" id="show_basin">BASIN</button>
+            </div>
         </div>
     </div>
 </div>
