--- a/asset/template/index.html
+++ b/asset/template/index.html
@@ -61,6 +61,7 @@
             </div>
             <div class="row">
                 <button type="button" class="btn btn-info inlineb" id="reload">RELOAD</button>
+                <button type="button" class="btn btn-info inlineb" id="run">RUN TURN</button>
             </div>
             <div class="row ubscript">
                 <p class='text-muted'>Display Actions</p>
