Make rivers visible to frontend

--- a/asset/template/index.html
+++ b/asset/template/index.html
@@ -62,6 +62,7 @@
             <div class="row">
                 <button type="button" class="btn btn-info inlineb" id="reload">RELOAD</button>
                 <button type="button" class="btn btn-info inlineb" id="run">RUN TURN</button>
+                <button type="button" class="btn btn-info inlineb" id="decade">DECADE</button>
             </div>
             <div class="row ubscript">
                 <p class='text-muted'>Display Actions</p>
